# aiswatcher

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.md  config.h.in  runboth.sh
daemons/init.d/: startAIS
daemons/network/if-up.d/: startAIS
src/: main.c  main.h  sounddecoder.c  sounddecoder.h
src/lib/: protodec.c  receiver.c
src/lib/alsaaudio/: alsaaudio.c  alsaaudio.h
src/lib/pulseaudio/: pulseaudio.c  pulseaudio.h
src/lib/winmmaudio/: winmm_input.c  winmm_input.h
src/rtl_fm/: rtl_fm.c
